// src/api-rest/reservation/reservation.service.ts
import { Injectable, NotFoundException } from '@nestjs/common';
import { InjectRepository } from '@nestjs/typeorm';
import { Repository } from 'typeorm';
import { ReservationEntity } from '../../entities/reservation.entity';
import { NotificationEntity } from '../../entities/notification.entity';
import { StatusEnum } from '../../entities/status.enum';
import { NotificationClient } from '../../grpc-service/notification/notification.client';

@Injectable()
export class ReservationService {
  constructor(
    @InjectRepository(ReservationEntity)
    private reservationRepository: Repository<ReservationEntity>,
    @InjectRepository(NotificationEntity)
    private notificationRepository: Repository<NotificationEntity>,
    private notificationClient: NotificationClient,
  ) { }

  async create(reservationData: any): Promise<ReservationEntity> {
    console.log('üìù Donn√©es re√ßues pour cr√©ation r√©servation:', reservationData);

    // CORRECTION: Validation des donn√©es obligatoires
    if (!reservationData.user_id) {
      throw new Error('userId est requis pour cr√©er une r√©servation');
    }
    if (!reservationData.room_id) {
      throw new Error('roomId est requis pour cr√©er une r√©servation');
    }
    if (!reservationData.start_time) {
      throw new Error('startTime est requis pour cr√©er une r√©servation');
    }
    if (!reservationData.end_time) {
      throw new Error('endTime est requis pour cr√©er une r√©servation');
    }

    // CORRECTION: Cr√©er l'objet r√©servation avec toutes les donn√©es n√©cessaires
    const reservation = this.reservationRepository.create({
      userId: parseInt(reservationData.user_id.toString()),
      roomId: parseInt(reservationData.room_id.toString()),
      startTime: new Date(reservationData.start_time),
      endTime: new Date(reservationData.end_time),
      location: reservationData.location || 'Default location',
      status: reservationData.status || StatusEnum.PENDING,
    });

    console.log('üíæ R√©servation √† sauvegarder:', reservation);

    // Sauvegarder la r√©servation
    const savedReservation = await this.reservationRepository.save(reservation);
    console.log('‚úÖ R√©servation sauvegard√©e:', savedReservation);

    // CORRECTION: Recharger la r√©servation avec les relations pour la r√©ponse
    const reservationWithRelations = await this.reservationRepository.findOne({
      where: { id: savedReservation.id },
      relations: ['user', 'room'], // Charger les relations user et room
    });

    console.log('üìã R√©servation avec relations:', reservationWithRelations);

    // Cr√©er une notification via gRPC
    const notificationRequest = {
      reservationId: parseInt(savedReservation.id),
      message: `Nouvelle r√©servation cr√©√©e pour la chambre ${savedReservation.roomId}`,
      notificationDate: new Date().toISOString(),
      isSent: false,
    };

    console.log('üìß Cr√©ation notification gRPC:', notificationRequest);

    // Appel asynchrone au microservice de notification
    this.notificationClient.createNotification(notificationRequest).subscribe(
      (result) => console.log('‚úÖ Notification cr√©√©e:', result),
      (error) => console.error('‚ùå Erreur notification:', error),
    );

    // CORRECTION: Retourner la r√©servation avec les relations charg√©es
    return reservationWithRelations || savedReservation;
  }

  async update(
    id: number,
    updateData: Partial<ReservationEntity>,
  ): Promise<ReservationEntity> {
    console.log(`üìù Mise √† jour r√©servation ${id} avec:`, updateData);

    const existingReservation = await this.findOne(id);

    // Merger les donn√©es correctement
    const updatedReservation = {
      ...existingReservation,
      ...updateData,
      // S'assurer que les IDs restent des numbers
      userId: updateData.userId ? parseInt(updateData.userId.toString()) : existingReservation.userId,
      roomId: updateData.roomId ? parseInt(updateData.roomId.toString()) : existingReservation.roomId,
    };

    const result = await this.reservationRepository.save(updatedReservation);
    console.log('‚úÖ R√©servation mise √† jour:', result);

    // CORRECTION: Recharger avec les relations
    const resultWithRelations = await this.reservationRepository.findOne({
      where: { id: result.id },
      relations: ['user', 'room'],
    });

    // Si le statut a √©t√© mis √† jour, cr√©er une notification
    if (updateData.status) {
      let message = '';
      switch (updateData.status) {
        case StatusEnum.APPROVED:
          message = `Votre r√©servation #${id} a √©t√© approuv√©e`;
          break;
        case StatusEnum.CANCELLED:
          message = `Votre r√©servation #${id} a √©t√© annul√©e`;
          break;
        case StatusEnum.PENDING:
          message = `Votre r√©servation #${id} est en attente de confirmation`;
          break;
        default:
          message = `Le statut de votre r√©servation #${id} a √©t√© mis √† jour`;
      }

      const notification = {
        reservationId: id,
        message,
        notificationDate: new Date().toISOString(),
        isSent: false,
      };

      this.notificationClient.createNotification(notification).subscribe(
        (result) => console.log('‚úÖ Notification de mise √† jour cr√©√©e:', result),
        (error) => console.error('‚ùå Erreur notification mise √† jour:', error),
      );
    }

    return resultWithRelations || result;
  }

  async findAll(): Promise<ReservationEntity[]> {
    // CORRECTION: Charger les relations dans findAll aussi
    return this.reservationRepository.find({
      relations: ['user', 'room'],
    });
  }

  async findOne(id: number): Promise<ReservationEntity> {
    // CORRECTION: Charger les relations dans findOne aussi
    const reservation = await this.reservationRepository.findOne({
      where: { id: id.toString() },
      relations: ['user', 'room'],
    });
    if (!reservation) {
      throw new NotFoundException(`Reservation with ID ${id} not found`);
    }
    return reservation;
  }

  async remove(id: number): Promise<void> {
    const reservation = await this.reservationRepository.findOne({
      where: { id: id.toString() },
    });

    if (!reservation) {
      throw new NotFoundException(`Reservation with ID ${id} not found`);
    }

    try {
      // Supprimer d'abord toutes les notifications li√©es √† cette r√©servation
      await this.notificationRepository.delete({ reservationId: id });

      // Puis supprimer la r√©servation
      await this.reservationRepository.delete(id);
    } catch (error) {
      console.error('Erreur lors de la suppression de la r√©servation:', error);
      throw error;
    }
  }
}